--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "devDependencies": {
         "@types/jest": "^29.5.2",
         "@types/node": "^20.3.3",
+        "@typescript-eslint/eslint-plugin": "^6.0.0",
+        "@typescript-eslint/parser": "^6.0.0",
+        "eslint": "^8.44.0",
         "jest": "^29.6.0",
         "rimraf": "^5.0.1",
         "ts-jest": "^29.1.1",
