--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "fortunes-algo",
-    "version": "1.0.0",
+    "name": "fortunes-algorithm",
+    "version": "0.1.0",
     "description": "Implementation of Fortune's algorithm to compute Voronoi diagrams",
     "main": "./dist/index.js",
     "files": [
@@ -8,7 +8,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/shambu09/fortunes-algo.git"
+        "url": "https://github.com/shambu09/fortunes-algorithm.git"
     },
     "scripts": {
         "build": "rimraf ./dist && tsc",
